formatting and deleting unused files

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -5,11 +5,19 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Ingrese su email para recibir un correo y generar una nueva contraseña.</p>
+      <p class="login-box-msg">
+        Ingrese su email para recibir un correo y generar una nueva contraseña.
+      </p>
 
       <form action="recover-password.html" method="post">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Email">
+          <input
+            type="email"
+            class="form-control"
+            [(ngModel)]="email"
+            [ngModelOptions]="{ standalone: true }"
+            placeholder="Email"
+          />
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -18,7 +26,13 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <button type="button" class="btn btn-primary btn-block" (click)="sendResetMail()">Solicitar nueva Contraseña</button>
+            <button
+              type="button"
+              class="btn btn-primary btn-block"
+              (click)="sendResetMail()"
+            >
+              Solicitar nueva Contraseña
+            </button>
           </div>
           <!-- /.col -->
         </div>
@@ -31,5 +45,12 @@
     <!-- /.login-card-body -->
   </div>
 </div>
-  
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="square-jelly-box"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
