--- a/src/app/layout/appmenu/appmenu.component.html
+++ b/src/app/layout/appmenu/appmenu.component.html
@@ -1,33 +1,42 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-        <!--
+  <!-- Brand Logo -->
+  <a href="index3.html" class="brand-link">
+    <!--
     <img src="../../assets/images/logo.svg" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">-->
-        <span class="brand-text font-weight-light">DynamoSupport</span>
-    </a>
+    <span class="brand-text font-weight-light">DynamoSupport</span>
+  </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-                <img src="../../assets/dist/img/avatar5.png" class="img-circle elevation-2" alt="User Image">
-            </div>
-            <div class="info">
-                <a href="#" class="d-block text-center">{{userFullName}}</a>
-                <p class="text-muted text-center">{{userProfile}}</p>
-            </div>
-        </div>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Sidebar user panel (optional) -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="image">
+        <img
+          src="../../assets/dist/img/avatar5.png"
+          class="img-circle elevation-2"
+          alt="User Image"
+        />
+      </div>
+      <div class="info">
+        <a href="#" class="d-block text-center">{{ userFullName }}</a>
+        <p class="text-muted text-center">{{ userProfile }}</p>
+      </div>
+    </div>
 
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul
+        class="nav nav-pills nav-sidebar flex-column"
+        data-widget="treeview"
+        role="menu"
+        data-accordion="false"
+      >
+        <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
 
-                <!--<li class="nav-item has-treeview">
+        <!--<li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
                         <i class="nav-icon fas fa-list-alt"></i>
                         <p>
@@ -42,7 +51,7 @@
                                 <p>Bandeja</p>
                             </a>
                         </li>-->
-                <!--
+        <!--
                                             <li class="nav-item" *ngIf="(role.CoordinadorQA == currentUser.user.rolId || role.AnalistaQA == currentUser.user.rolId)">
                                             <a routerLink="/puntosFuncion" routerLinkActive="active" class="nav-link" >
                                                 <i class="far fa-circle nav-icon"></i>
@@ -50,80 +59,100 @@
                                             </a>
                                             </li>
                                             -->
-                <!--</ul>
+        <!--</ul>
                 </li>-->
-                <!--FRANCIA 02/06/2021 INICIO-->
-                <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-list-alt"></i>
-                        <p>
-                            Gestion Personal
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="/mantenimientoPersonal" routerLinkActive="active" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Personal</p>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="/mantenimientoRecurso" routerLinkActive="active" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Recurso Hardware</p>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="/mantenimientoCuenta" routerLinkActive="active" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Recurso Cuenta</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-list-alt"></i>
-                        <p>
-                            Mantenimiento
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="/entidad" routerLinkActive="active" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Entidad</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                  <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-list-alt"></i>
-                        <p>
-                            Facturación
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="/mantenimientofacturacion" routerLinkActive="active" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Facturacion</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <!--FRANCIA 02/06/2021 FIN-->
-            </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
+        <!--FRANCIA 02/06/2021 INICIO-->
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-list-alt"></i>
+            <p>
+              Gestion Personal
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a
+                routerLink="/mantenimientoPersonal"
+                routerLinkActive="active"
+                class="nav-link"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Personal</p>
+              </a>
+            </li>
+          </ul>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a
+                routerLink="/mantenimientoRecurso"
+                routerLinkActive="active"
+                class="nav-link"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Recurso Hardware</p>
+              </a>
+            </li>
+          </ul>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a
+                routerLink="/mantenimientoCuenta"
+                routerLinkActive="active"
+                class="nav-link"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Recurso Cuenta</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-list-alt"></i>
+            <p>
+              Mantenimiento
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a
+                routerLink="/entidad"
+                routerLinkActive="active"
+                class="nav-link"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Entidad</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-list-alt"></i>
+            <p>
+              Facturación
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a
+                routerLink="/mantenimientofacturacion"
+                routerLinkActive="active"
+                class="nav-link"
+              >
+                <i class="far fa-circle nav-icon"></i>
+                <p>Facturacion</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <!--FRANCIA 02/06/2021 FIN-->
+      </ul>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!-- /.sidebar -->
 </aside>
