--- a/src/app/new-password/new-password.component.html
+++ b/src/app/new-password/new-password.component.html
@@ -1,4 +1,3 @@
-
 <div class="hold-transition login-page">
   <div class="login-logo">
     <a href="../../index2.html"><b>Dynamo</b>B2B</a>
@@ -7,10 +6,16 @@
   <div class="card">
     <div class="card-body login-card-body">
       <p class="login-box-msg">Está a un paso, ingrese su nueva contraseña.</p>
-  
+
       <form action="login.html" method="post">
         <div class="input-group mb-3">
-          <input type="password" class="form-control" [(ngModel)]="newPassword" [ngModelOptions]="{standalone: true}" placeholder="Nueva Contraseña">
+          <input
+            type="password"
+            class="form-control"
+            [(ngModel)]="newPassword"
+            [ngModelOptions]="{ standalone: true }"
+            placeholder="Nueva Contraseña"
+          />
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -18,7 +23,13 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" [(ngModel)]="confirmPassword" [ngModelOptions]="{standalone: true}" placeholder="Confirme Nueva Contraseña">
+          <input
+            type="password"
+            class="form-control"
+            [(ngModel)]="confirmPassword"
+            [ngModelOptions]="{ standalone: true }"
+            placeholder="Confirme Nueva Contraseña"
+          />
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -27,16 +38,27 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <button type="button" class="btn btn-primary btn-block" (click)="changePassword()">Cambiar Contraseña</button>
+            <button
+              type="button"
+              class="btn btn-primary btn-block"
+              (click)="changePassword()"
+            >
+              Cambiar Contraseña
+            </button>
           </div>
           <!-- /.col -->
         </div>
       </form>
-  
     </div>
     <!-- /.login-card-body -->
   </div>
 </div>
 
-
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="square-jelly-box"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
