--- a/src/app/puntos-funcion-maintenance/puntos-funcion-maintenance.component.html
+++ b/src/app/puntos-funcion-maintenance/puntos-funcion-maintenance.component.html
@@ -4,24 +4,31 @@
       <div class="col-sm-6">
         <h1>Puntos Función</h1>
       </div>
-      <div class="col-sm-6">
-      </div>
+      <div class="col-sm-6"></div>
     </div>
-  </div><!-- /.container-fluid -->
+  </div>
+  <!-- /.container-fluid -->
 </section>
 
 <!-- Main content -->
 <section class="content">
   <div class="container-fluid">
-
     <!--Add Punto Función-->
     <div class="card card-default">
       <div class="card-header">
         <h3 class="card-title">Agregar Punto Función</h3>
 
         <div class="card-tools">
-          <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i></button>
-          <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
+          <button
+            type="button"
+            class="btn btn-tool"
+            data-card-widget="collapse"
+          >
+            <i class="fas fa-minus"></i>
+          </button>
+          <button type="button" class="btn btn-tool" data-card-widget="remove">
+            <i class="fas fa-times"></i>
+          </button>
         </div>
       </div>
       <!-- /.card-header -->
@@ -30,9 +37,19 @@
           <div class="col-md-6">
             <div class="form-group">
               <label>Codigo Único de Solicitudes</label>
-              <select class="form-control select2" style="width: 100%;" [(ngModel)]="idSolicitud" [ngModelOptions]="{standalone: true}" (change)="cargarPF()" disabled>
-                <option *ngFor="let ls of ListaSolicitudes" [value]="ls.idSolicitud">
-                  {{ls.codigoUnico}}
+              <select
+                class="form-control select2"
+                style="width: 100%"
+                [(ngModel)]="idSolicitud"
+                [ngModelOptions]="{ standalone: true }"
+                (change)="cargarPF()"
+                disabled
+              >
+                <option
+                  *ngFor="let ls of ListaSolicitudes"
+                  [value]="ls.idSolicitud"
+                >
+                  {{ ls.codigoUnico }}
                 </option>
               </select>
             </div>
@@ -43,7 +60,12 @@
           <div class="col-md-6">
             <div class="form-group">
               <label> PF </label>
-              <input type="text" class="form-control" [(ngModel)]="puntoFuncion.numero" [ngModelOptions]="{standalone: true}">
+              <input
+                type="text"
+                class="form-control"
+                [(ngModel)]="puntoFuncion.numero"
+                [ngModelOptions]="{ standalone: true }"
+              />
             </div>
           </div>
         </div>
@@ -54,7 +76,12 @@
           <div class="col-12 col-sm-12">
             <div class="form-group">
               <label> Nombre </label>
-              <input type="text" class="form-control" [(ngModel)]="puntoFuncion.nombre" [ngModelOptions]="{standalone: true}">
+              <input
+                type="text"
+                class="form-control"
+                [(ngModel)]="puntoFuncion.nombre"
+                [ngModelOptions]="{ standalone: true }"
+              />
             </div>
             <!-- /.form-group -->
           </div>
@@ -66,16 +93,27 @@
       <div class="card-footer">
         <div class="row">
           <div class="col-12 text-center">
-
-            <button type="button" class="btn btn-primary " (click)="agregarPuntoFuncion()" *ngIf="!isActualizar">Agregar</button>
-            <button type="button" class="btn btn-primary " (click)="actualizarPuntoFuncion()" *ngIf="isActualizar">Actualizar</button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              (click)="agregarPuntoFuncion()"
+              *ngIf="!isActualizar"
+            >
+              Agregar
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              (click)="actualizarPuntoFuncion()"
+              *ngIf="isActualizar"
+            >
+              Actualizar
+            </button>
           </div>
-            
         </div>
       </div>
     </div>
     <!-- /.card -->
-
 
     <!--Table-->
     <div class="card card-default">
@@ -91,13 +129,21 @@
           </thead>
           <tbody>
             <tr *ngFor="let lpf of ListaPF">
-              <td>PF{{lpf.idPf}}</td>
-              <td>{{lpf.nombre}}</td>
+              <td>PF{{ lpf.idPf }}</td>
+              <td>{{ lpf.nombre }}</td>
               <td>
-                <a role="button" class="nav-link" (click)="editarPuntoFuncion(lpf.id)">
-                  <i class="fas fa-edit" ></i>
+                <a
+                  role="button"
+                  class="nav-link"
+                  (click)="editarPuntoFuncion(lpf.id)"
+                >
+                  <i class="fas fa-edit"></i>
                 </a>
-                <a role="button" class="nav-link" (click)="eliminarPuntoFuncion(lpf.id)">
+                <a
+                  role="button"
+                  class="nav-link"
+                  (click)="eliminarPuntoFuncion(lpf.id)"
+                >
                   <i class="fas fa-times"></i>
                 </a>
               </td>
@@ -111,11 +157,23 @@
 
     <div class="row">
       <div class="col-12">
-        <button type="button" class="btn btn-primary" (click)="regresarBandeja()">Regresar</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          (click)="regresarBandeja()"
+        >
+          Regresar
+        </button>
       </div>
     </div>
   </div>
 </section>
 
-
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="square-jelly-box"
+  [fullScreen]="true"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
