--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -1,19 +1,14 @@
-<div class="view-backgrond"></div>
-
-<div class="form-card">
-  <div class="login-form">
-    <img class="logo" src="../../../assets/images/logos/tercerosLogo.svg" />
-    <div class="tf-hispam">
-      <span class="c-male">Bienvenido a </span>
+<div class="sidenav">
+  <div class="login-main-text bgimg"></div>
+</div>
+<div class="main">
+  <div class="col-md-6 col-sm-12">
+    <div class="login-form">
+      <div>Web Dynamo Support</div>
       <br />
-      Web Dynamo Support
-    </div>
-
-    <form [formGroup]="myLoginForm" class="loginform my-5">
-      <!-- email de usuario -->
-      <div style="width: 300px">
-        <label class="col-form-label lab-color">Usuario</label>
-        <div>
+      <form>
+        <div class="form-group">
+          <label>Usuario</label>
           <input
             type="text"
             class="form-control"
@@ -21,47 +16,34 @@
             [(ngModel)]="username"
             [ngModelOptions]="{ standalone: true }"
           />
-          <small
-            class="form-text text-danger"
-            *ngIf="campoNoValido('username')"
-          >
-            * Debe ingresar un usuario válido
-          </small>
         </div>
-      </div>
-
-      <!-- Contraseña -->
-      <div class="form-group" style="width: 300px">
-        <label class="col-form-label lab-color">Contraseña</label>
-        <div class="">
-          <!-- formControlName="password" -->
+        <div class="form-group">
+          <label>Contraseña</label>
           <input
             type="password"
             class="form-control"
             placeholder="Contraseña"
             [(ngModel)]="password"
             [ngModelOptions]="{ standalone: true }"
-          /><small
-            class="form-text text-danger"
-            *ngIf="campoNoValido('password')"
-          >
-            * Debe de contener como mínimo 4 caracteres
-          </small>
+          />
         </div>
-      </div>
-
-      <!-- Iniciar sesión-->
-      <div class="form-group text-center">
-        <button
-          class="cli-btn btn-l btn-emerald my-4"
-          type="submit"
-          (click)="onSubmit()"
-          [disabled]="myLoginForm.invalid"
-        >
-          <!-- <mat-icon class="icon-cent">login</mat-icon>  -->
-          Ingresar
+        <button type="button" class="btn btn-black" (click)="onSubmit()">
+          Login
         </button>
-      </div>
-    </form>
+      </form>
+    </div>
+    <p class="mb-1">
+      <!--<a routerLink="/forgotPassword">Olvidé mi Contraseña</a>-->
+    </p>
   </div>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="square-jelly-box"
+  [fullScreen]="true"
+>
+  <p style="color: white">Loading...</p>
+</ngx-spinner>
